# FormacaoPythonDeveloper

./: Conhecendo.py  Input_Output.py  Operadores.py  Primeiro_programa.py  RestAutenticacao.py  analise_excel.py  analise_exploratoria.py  analise_pd.py  app.py  atividades.db  b.txt  ch.py  clienteUDP.py  clientetcp.py  condicional_aninhada.py  conversao_tipo.py  estrutura_repeticao.py  fatiamento.py  geraHash.py  gerador.py  geradorWordList.py  habilidades.py  if_else_elif.py  interpolacao_variaveis.py  ipExterno.py  ips.py  manipulandoSqlAlchemy.py  models.py  ocultador.py  openwb.py  pingMultiplo.py  pingSimples.py  pyMongoApplication.py  requirements.txt  restcompleta.py  restfulApi.py  run.py  servidorUDP.py  sistema_bancario.py  sqlAlchemyApplication.py  (+6 more)
consumindoApiTwitter/: docker-compose.yml  main.py  pyproject.toml  setup.cfg
consumindoApiTwitter/src/: responses.py  secrets.py  services.py  testes.py
excel/: analia.xlsx  barigui.xlsx  mueller.xlsx  salvador.xlsx
image_processor/: processor.py  test_image_processor.py
meu_app/: app.py  dados.json
